--- a/klima-dashboard-tile.html
+++ b/klima-dashboard-tile.html
@@ -39,9 +39,13 @@ tile of klima-dashboard
         rightNeighbour: {
           type: Object
         },
-        order: {
+        positions: {
           type: Array,
           value: [1]
+        },
+        tiledrawn: {
+          type: Boolean,
+          value: false
         }
       },
     });
