--- a/klima-dashboard.html
+++ b/klima-dashboard.html
@@ -15,13 +15,11 @@ dashboard
       }
       #dashboard {
         position: relative;
-        width: 700px;
-        height: 700px;
+        width: var(--klima-dashboard-width);
+        height: var(--klima-dashboard-height);
         border-style: solid;
       }
     </style>
-
-    <h2>Hello!</h2>
     <div id="dashboard">
       <content id="tiles" select="klima-dashboard-tile"></content>
     </div>
